rbin_local/iptables.txt
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# PING
-A INPUT -p icmp -m icmp --icmp-type any -j ACCEPT

# RELATED, ESTABLISHED
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# LOG
-A INPUT -p tcp -m state --state NEW -m tcp --dport 51004 -j LOG
-A INPUT -j LOG --log-level 7

# Localhost
-A INPUT -i lo -j ACCEPT

# Copy Contents
-A INPUT  -s 172.16.9.0/24 -p tcp -m state --state NEW -m tcp --dport 7032 -j ACCEPT

# we_cmd
-A INPUT  -s 172.16.8.0/24 -p tcp -m state --state NEW -m tcp --dport 5001 -j ACCEPT

# we_fdn
-A INPUT  -s 172.16.8.0/24 -p tcp -m state --state NEW -m tcp --dport 5003 -j ACCEPT

# we_fup
-A INPUT  -s 172.16.8.0/24 -p tcp -m state --state NEW -m tcp --dport 5005 -j ACCEPT

# we_dcmd
-A INPUT -s 172.16.8.0/24 -p tcp -m state --state NEW -m multiport --dport 4998,4999 -j ACCEPT
-A INPUT -s 172.16.9.0/24 -p tcp -m state --state NEW -m multiport --dport 4998,4999 -j ACCEPT

# we_install
-A INPUT  -s 172.16.8.0/24 -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT
-A INPUT  -s 172.16.9.0/24 -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT

# nginx
-A INPUT  -s 172.16.8.0/24 -p tcp -m state --state NEW -m tcp --dport 8888 -j ACCEPT
-A INPUT  -s 172.16.9.0/24 -p tcp -m state --state NEW -m tcp --dport 8888 -j ACCEPT

# Office
-A INPUT -s 172.16.9.206 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.9.230 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.8.13 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.8.18 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.8.23 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.8.24 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.8.25 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.8.28 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.8.29 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.8.30 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.8.195 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.8.41 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.8.42 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.8.44 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.8.45 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.8.20 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT
-A INPUT -s 172.16.8.183 -p tcp -m state --state NEW -m tcp --dport 51004 -j ACCEPT

# All Deny
-A INPUT -j REJECT --reject-with icmp-host-prohibited

COMMIT
